# sessions_manager

./: .env  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  database.db  pyproject.toml  session-manager.service
deb-packages/: session-manager_0.0.1.dsc  session-manager_0.0.1_all.deb  session-manager_0.0.1_amd64.buildinfo  session-manager_0.0.1_amd64.changes
debian/: changelog  control  install  postinst  prerm  rules
src/: config.py  constants.py  database.py  exception.py  logger.py  main.py  models.py
src/dependencies/: app.py  init_app.py  limit.py  limit_counters.py  repo.py  user.py
src/repositories/: __init__.py  app.py  limit.py  limit_counter.py  user.py
src/routers/: apps.py  limits.py  users.py
src/routers/api/: apps.py  limits.py  users.py
src/services/: __init__.py  app.py  limit.py  limit_counter.py  local_user_collector.py  processes_collector.py  sessions_collector.py  user.py
src/services/background/: __init__.py  access_killer.py  access_locker.py  counter_updater.py  process_killer.py
src/shemes/: __init__.py  app.py  cli.py  limit.py  limit_counter.py  proc.py  session.py  user.py
src/static/js/: create.app.js  create.limit.js  fill.apps.js  on.change.range.js  on.delete.limit.js  push.toggle.active.js
src/templates/: app_detail.html  app_list.html  apps.html  base.html  user_detail.html  user_list.html
src/utils/: checks.py  cmd.py
