[tool.poetry]
name = "sessions-manager"
version = "0.1.0"
description = "Sessions manager application"
authors = ["glb <glebserg@mail.ru>"]
readme = "README.md"

[tool.poetry-deb]
maintainer = "glb <glebserg@mail.ru>"
depends = ["python3"]
section = "python"
priority = "optional"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
uvicorn = ">=0.35.0,<0.36.0"
pydantic-settings = ">=2.10.1,<3.0.0"
sqlalchemy = ">=2.0.43,<3.0.0"
psutil = ">=7.1.0,<8.0.0"
apscheduler = ">=3.11.0,<4.0.0"
jinja2 = ">=3.1.6,<4.0.0"
fastapi = ">=0.117.1,<0.118.0"
python-multipart = ">=0.0.20,<0.0.21"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
fix = true
line-length = 120

[tool.isort]
py_version = 312
profile = "black"
line_length = 120